UPDT: Users list alignment fixed

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,9 +1,7 @@
 #container {
-  width: 90%;
+  width: 100%;
   max-width: 50rem;
   margin: 2.6rem auto;
-  display: grid;
-  grid-auto-flow: row;
   gap: 3rem;
 }
 
@@ -12,16 +10,9 @@
   margin: 0;
   padding: 0;
   display: flex;
-  gap: 0.5rem;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  gap: 0.8rem;
   overflow: auto;
-}
-
-@media (min-width:768px) {
-  main {
-    margin: 4rem auto;
-  }
-
-  #users{
-    flex-direction: column;
-  }
 }
