--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -2,7 +2,6 @@ div {
   border-radius: 6px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  max-width: 25%;
 }
 
 button {
@@ -15,8 +14,8 @@ button {
   border: none;
   font: inherit;
   cursor: pointer;
-  width: 100%;
-  min-width: 12rem;
+  width: 25%;
+  min-width: 15rem;
   text-align: left;
 }
 
